@@ -309,7 +309,6 @@ import org.wso2.ballerinalang.util.Lists;
 
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Deque;
@@ -961,7 +960,7 @@ public class Desugar extends BLangNodeVisitor {
         typedescExpr.resolvedType = type;
         typedescExpr.setBType(typedescType);
 
-        return new ArrayList<>(Arrays.asList(orgLiteral, moduleNameLiteral, versionLiteral, configNameLiteral,
+        return new ArrayList<>(List.of(orgLiteral, moduleNameLiteral, versionLiteral, configNameLiteral,
                 typedescExpr));
     }
 
@@ -2020,7 +2019,7 @@ public class Desugar extends BLangNodeVisitor {
         BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
                 symTable.stringType, null, symTable.builtinPos, SymbolOrigin.VIRTUAL);
         BType entriesType = new BMapType(TypeTags.MAP,
-                new BTupleType(Arrays.asList(new BTupleMember(symTable.stringType, stringVarSymbol),
+                new BTupleType(List.of(new BTupleMember(symTable.stringType, stringVarSymbol),
                         new BTupleMember(constraintType, varSymbol))), null);
         BLangSimpleVariable entriesInvocationVar = defVariable(pos, entriesType, parentBlockStmt,
                 types.addConversionExprIfRequired(entriesInvocation, entriesType),
@@ -3833,7 +3832,7 @@ public class Desugar extends BLangNodeVisitor {
             BLangSimpleVarRef restBindingPatternVarRef = declaredVarDef.get(restBindingPattern.variableName.value);
             matchStmtsForPattern.add(ASTBuilderUtil.createAssignmentStmt(pos, restBindingPatternVarRef,
                     createLangLibInvocationNode("slice", tempCastVarRef,
-                            new ArrayList<>(Arrays.asList(new BLangLiteral((long) bindingPatterns.size(),
+                            new ArrayList<>(List.of(new BLangLiteral((long) bindingPatterns.size(),
                                     symTable.intType))), null, pos)));
         }
 
@@ -3938,7 +3937,7 @@ public class Desugar extends BLangNodeVisitor {
                     declaredVarDef.get(restBindingPattern.variableName.value);
             matchStmtsForPattern.add(ASTBuilderUtil.createAssignmentStmt(pos, restBindingPatternVarRef,
                     createLangLibInvocationNode("slice", tempCastVarRef,
-                            new ArrayList<>(Arrays.asList(new BLangLiteral((long) bindingPatterns.size(),
+                            new ArrayList<>(List.of(new BLangLiteral((long) bindingPatterns.size(),
                                     symTable.intType))), null, pos)));
         }
         BLangStatementExpression statementExpression = ASTBuilderUtil.createStatementExpression(blockStmt,
@@ -4152,7 +4151,7 @@ public class Desugar extends BLangNodeVisitor {
                         symTable.stringType, null, symTable.builtinPos, VIRTUAL);
                 BVarSymbol anydataVarSymbol = new BVarSymbol(0, null, null,
                         symTable.anydataType, null, symTable.builtinPos, VIRTUAL);
-                BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(Arrays.asList(
+                BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(List.of(
                         new BTupleMember(symTable.stringType, stringVarSymbol),
                         new BTupleMember(symTable.anydataType, anydataVarSymbol))), null);
                 BLangInvocation entriesInvocation = generateMapEntriesInvocation(errorDetailVarRef, entriesType);
@@ -4241,7 +4240,7 @@ public class Desugar extends BLangNodeVisitor {
             BLangSimpleVarRef restMatchPatternVarRef = declaredVarDef.get(restMatchPattern.getIdentifier().getValue());
             matchStmtsForPattern.add(ASTBuilderUtil.createAssignmentStmt(pos, restMatchPatternVarRef,
                     createLangLibInvocationNode("slice", tempCastVarRef,
-                            new ArrayList<>(Arrays.asList(new BLangLiteral((long) matchPatterns.size(),
+                            new ArrayList<>(List.of(new BLangLiteral((long) matchPatterns.size(),
                                     symTable.intType))), null, pos)));
         }
 
@@ -4331,7 +4330,7 @@ public class Desugar extends BLangNodeVisitor {
                 null, null);
         BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
                 symTable.stringType, null, symTable.builtinPos, VIRTUAL);
-        BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(Arrays.asList(new BTupleMember(
+        BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(List.of(new BTupleMember(
                 symTable.stringType, stringVarSymbol), new BTupleMember(constraintType, varSymbol))), null);
         BLangInvocation entriesInvocation = generateMapEntriesInvocation(matchExprVarRef, entriesType);
         BLangSimpleVariableDef entriesVarDef = createVarDef("$entries$", entriesType, entriesInvocation, pos);
@@ -4522,7 +4521,7 @@ public class Desugar extends BLangNodeVisitor {
         BVarSymbol varSymbol = Symbols.createVarSymbolForTupleMember(restType);
         BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
                 symTable.stringType, null, symTable.builtinPos, VIRTUAL);
-        BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(Arrays.asList(
+        BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(List.of(
                 new BTupleMember(symTable.stringType, stringVarSymbol),
                 new BTupleMember(restType, varSymbol))), null);
         BLangInvocation entriesInvocation = generateMapEntriesInvocation(varRef, entriesType);
@@ -4597,7 +4596,7 @@ public class Desugar extends BLangNodeVisitor {
                     declaredVarDef.get(restMatchPattern.getIdentifier().getValue());
             matchStmtsForPattern.add(ASTBuilderUtil.createAssignmentStmt(pos, restMatchPatternVarRef,
                     createLangLibInvocationNode("slice", tempCastVarRef,
-                            new ArrayList<>(Arrays.asList(new BLangLiteral((long) matchPatterns.size(),
+                            new ArrayList<>(List.of(new BLangLiteral((long) matchPatterns.size(),
                                     symTable.intType))), null, pos)));
         }
 
@@ -4643,7 +4642,7 @@ public class Desugar extends BLangNodeVisitor {
             BVarSymbol varSymbol = new BVarSymbol(restType.flags, null, null, restType, null, null, null);
             BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
                     symTable.stringType, null, symTable.builtinPos, VIRTUAL);
-            BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(Arrays.asList(
+            BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(List.of(
                     new BTupleMember(symTable.stringType, stringVarSymbol),
                     new BTupleMember(restType, varSymbol))), null);
             BLangInvocation entriesInvocation = generateMapEntriesInvocation(tempCastVarRef, entriesType);
@@ -4818,7 +4817,7 @@ public class Desugar extends BLangNodeVisitor {
                         symTable.stringType, null, symTable.builtinPos, VIRTUAL);
                 BVarSymbol anydataVarSymbol = new BVarSymbol(0, null, null,
                         symTable.anydataType, null, symTable.builtinPos, VIRTUAL);
-                BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(Arrays.asList(
+                BMapType entriesType = new BMapType(TypeTags.MAP, new BTupleType(List.of(
                         new BTupleMember(symTable.stringType, stringVarSymbol),
                         new BTupleMember(symTable.anydataType, anydataVarSymbol))), null);
                 BLangInvocation entriesInvocation = generateMapEntriesInvocation(errorDetailVarRef, entriesType);
