@@ -28,7 +28,6 @@ import org.eclipse.lsp4j.CodeActionKind;
 import org.eclipse.lsp4j.Command;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -44,7 +43,7 @@ public class AddAllDocumentationCodeAction implements RangeBasedCodeActionProvid
 
     @Override
     public List<SyntaxKind> getSyntaxKinds() {
-        return Arrays.asList(SyntaxKind.FUNCTION_DEFINITION,
+        return List.of(SyntaxKind.FUNCTION_DEFINITION,
                 SyntaxKind.OBJECT_TYPE_DESC,
                 SyntaxKind.CLASS_DEFINITION,
                 SyntaxKind.SERVICE_DECLARATION,
