@@ -35,8 +35,6 @@ import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Deque;
 import java.util.IllegalFormatConversionException;
 import java.util.List;
@@ -51,19 +49,17 @@ import java.util.regex.PatternSyntaxException;
 public final class StringUtils {
 
     private static final String CHAR_PREFIX = "$";
-    private static List<String> specialCharacters = new ArrayList<>(Arrays.asList(",", "\\n", "\\r", "\\t", "\n", "\r",
-            "\t",
-            "\"", "\\", "!", "`"));
-    private static List<String> bracketCharacters = new ArrayList<>(Arrays.asList("{", "}", "[", "]", "(", ")"));
-    private static List<String> regexSpecialCharacters = new ArrayList<>(Arrays.asList("{", "}", "[", "]", "(", ")",
-            "+", "^", "|"));
+    private static final List<String> SPECIAL_CHARACTERS = List.of(",", "\\n", "\\r", "\\t", "\n", "\r",
+            "\t", "\"", "\\", "!", "`");
+    private static final List<String> BRACKET_CHARACTERS = List.of("{", "}", "[", "]", "(", ")");
+    private static final List<String> REGEX_SPECIAL_CHARACTERS = List.of("{", "}", "[", "]", "(", ")", "+", "^", "|");
 
     private StringUtils() {
     }
 
     public static Object matchWildcard(BString functionName, BString functionPattern) {
-        Object encodedFunctionPattern = encode(functionPattern.getValue(), regexSpecialCharacters);
-        Object encodedFunctionName = encode(functionName.getValue(), regexSpecialCharacters);
+        Object encodedFunctionPattern = encode(functionPattern.getValue(), REGEX_SPECIAL_CHARACTERS);
+        Object encodedFunctionName = encode(functionName.getValue(), REGEX_SPECIAL_CHARACTERS);
 
         if (encodedFunctionPattern instanceof BError) {
             return encodedFunctionPattern;
@@ -85,13 +81,13 @@ public final class StringUtils {
     public static Object escapeSpecialCharacters(BString key) {
         Object updatedKeyOrError = key.getValue();
         if (!isBalanced((String) updatedKeyOrError)) {
-            updatedKeyOrError = encode((String) updatedKeyOrError, bracketCharacters);
+            updatedKeyOrError = encode((String) updatedKeyOrError, BRACKET_CHARACTERS);
         }
 
         if (updatedKeyOrError instanceof BError) {
             return updatedKeyOrError;
         }
-        updatedKeyOrError = encode((String) updatedKeyOrError, specialCharacters);
+        updatedKeyOrError = encode((String) updatedKeyOrError, SPECIAL_CHARACTERS);
 
         if (updatedKeyOrError instanceof BError) {
             return updatedKeyOrError;
